Fixed collpasing jumpy thing

--- a/css/application.css
+++ b/css/application.css
@@ -349,7 +349,7 @@ a p.bc-option{
   margin-bottom: auto;
 }
 
-.right-panel-content{
+.right-panel-padding{
   padding-bottom: 1.25rem;
 }
 
